syntax = "proto3";

package com.TrendingMoviesService;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.TrendingMoviesService";

service TrendingMoviesIdsService {
    rpc getTrendingMoviesIds(google.protobuf.Empty) returns (RatingList) {

    };
}

message Rating {
    int32 movieId = 1;
    int32 rating = 2;
}

message RatingList {
    repeated Rating ratingList = 1;
}


